Code clean up and white space fixes on few pages.

--- a/src/components/filter/style.css
+++ b/src/components/filter/style.css
@@ -1,6 +1,12 @@
 a {
   text-decoration: none;
 }
+html,
+body,
+#root,
+.App {
+  height: 100%;
+}
 .back-arrow {
   width: 30px;
   height: 30px;
@@ -24,18 +30,18 @@ a {
 .star {
   width: 35px;
   height: 30px;
-  margin-left: 1px;
+  margin-left: -5px;
 }
 .card-title {
   text-align: left;
-  font-size: 13px;
+  font-size: 14px;
   color: gray;
 }
 .rating-card {
   width: 15%;
   display: flex;
   flex-direction: row;
-  padding: 3px;
+  padding: 5px;
   justify-content: space-evenly;
 }
 .flex-display {
@@ -61,18 +67,22 @@ a {
 }
 .radio-btn-titles + div {
   color: gray;
-  font-size: 13px;
+  font-size: 14px;
 }
 .App .apply-btn {
+  padding: 15px;
+  border-radius: 0;
+  width: 100%;
+}
+.App .apply-btn-wrapper {
   width: 100%;
   position: fixed;
   bottom: 0;
   left: 0;
-  padding: 15px;
-  border-radius: 0;
 }
-.facility-margin {
-  margin-bottom: 81px;
+.filter-wrapper {
+  padding-bottom: 54px;
+  min-height: 100%;
 }
 .filter-wrapper .margin {
   margin: 10px 0px;
