--- a/src/components/getstarted/style.css
+++ b/src/components/getstarted/style.css
@@ -10,10 +10,12 @@
   align-items: center;
   justify-content: center;
 }
+.start-page-wrapper > a {
+  margin-top: 50px;
+}
 .start-page-wrapper .getstarted_btn {
   width: 100%;
   min-width: 200px;
-  margin-top: 50px;
 }
 .header_title {
   color: white;
@@ -31,8 +33,8 @@
 }
 .circular-design {
   width: 25px;
-  padding: 7px;
+  padding: 10px;
   background-color: red;
   border-radius: 30px;  
-  margin-left: 7px;
+  margin-left: 5px;
 }
