--- a/src/components/homepage/style.css
+++ b/src/components/homepage/style.css
@@ -51,7 +51,7 @@
   padding: 10px;
 }
 .search-wrapper a {
-  margin: 0 5px;
+  margin: 12px 5px;
 }
 .search-text {
   height: 30px;
@@ -61,9 +61,6 @@
   border: 1px solid gray;
   font-size: 14px;
   padding: 5px 10px;
-}
-.App .search-btn {
-  margin: 12px 0;
 }
 .img-header {
   text-align: left;
