--- a/src/components/hotel-details/style.css
+++ b/src/components/hotel-details/style.css
@@ -2,9 +2,13 @@
   width: 100%;
   height: 200px;
 }
+.hotel-details-wrapper {
+  padding-bottom: 54px;
+  min-height: 100%;
+}
 .hotel-details-header {
   position: absolute;
-  top: 170px;
+  top: 190px;
   left: 10px;
   right: 10px;
   text-align: left
@@ -14,12 +18,11 @@
   padding: 10px;
 }
 .header-title-hotel-name {
-  font-size: 18;
+  font-size: 18px;
   color: black;
 }
 .header-title-hotel-subtitle {
   font-size: 12px;
-  padding: 2px;
 }
 .header-journey-details {
   display: flex;
@@ -27,7 +30,7 @@
   align-items: center;
 }
 .hotel-journey-dates {
-  padding: 10px;
+  padding: 5px;
   width: 100px;
   font-size: 13px;
 }
@@ -118,16 +121,19 @@
 }
 .App .book-btn {
   width: 100%;
+  padding: 15px;
+  border-radius: 0;
+}
+.App .book-btn-wrapper {
+  width: 100%;
   position: fixed;
   bottom: 0;
   left: 0;
-  padding: 15px;
-  border-radius: 0;
+  display: block;
 }
 .hotel-details-wrapper .hotel-info {
   padding: 10px;
   margin: 10px;
   color: red;
   text-align: left;
-  margin-bottom: 80px;
 }
