--- a/src/components/hotel-list/style.css
+++ b/src/components/hotel-list/style.css
@@ -16,11 +16,13 @@
   display: flex;
   margin: 10px;
   background-color: white;
+  padding: 10px;
 }
 .list-item-info {
   padding-left: 10px;
   text-align: left;
   color: gray;
+  width: 100%;
 }
 .list-item-img {
   width: 155px;
@@ -28,18 +30,18 @@
 }
 .hotel-title {
   font-size: 16px;
-  padding-top: 5px;
 }
 .hotel-subtitle {
   font-size: 13px;
-  padding: 5px;
+  padding: 5px 5px 5px 0;
 }
 .hotel-price-wrapper {
   display: flex;
 }
 .hotel-price {
   color: red;
-  font-size: 20px; 
+  font-size: 20px;
+  padding-right: 5px; 
 }
 .text-strike {
   text-decoration-line: line-through;
